tests/dataset/tpc-ds/compiler/c/q72.error
/tmp/TestCCompiler_TPCDS_Goldenq721801980805/001/prog.c: In function ‘test_TPCDS_Q72_simplified’:
/tmp/TestCCompiler_TPCDS_Goldenq721801980805/001/prog.c:300:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  300 |   if (test_TPCDS_Q72_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq721801980805/001/prog.c:304:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  304 |       if (test_TPCDS_Q72_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq721801980805/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq721801980805/001/prog.c:385:38: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  385 |   test_TPCDS_Q72_simplified_result = result;
      |                                      ^~~~~~
